[workspace]
members = [
    "programs/*"
]
resolver = "2"
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# unpack TickArray
bincode = "1"
default-boxed = "0.2.0"

[patch.crates-io]
anchor-syn = { git = "https://github.com/solana-foundation/anchor.git", rev = "54d5396" }
