[package]
name = "invest-in-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "invest_in_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
# orca cpi requires 0.30.1 for the time being
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }

# orca requirements
whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.30.1" }
solana-program = ">=1.18, <2"
# https://github.com/solana-labs/solana/issues/34609
ahash = "=0.8.11"
# unpack orca TickArray
bincode = "1"
default-boxed = "0.2.0"